# whisper.tflite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  encdec.cpp  main.cpp  minimal.cc  minimal.cpp  silent_detection.cpp  vad.cpp  wav_to_pcm.cpp  writeout.cpp
bindings/java/: CMakeLists.txt  whisper.tflite.cpp
export/: README.md  check-version.py  generate.py  generate_onnx.py  requirements.txt  run.py
io/github/jerinphilip/whisper/: Driver.java  EngineNative.java  IRecorderListener.java  IWhisperEngine.java  IWhisperListener.java  WaveUtil.java  Whisper.java  WhisperUtil.java
io/github/jerinphilip/whisper/asr/: IRecorderListener.java  IWhisperListener.java  Recorder.java  Whisper.java
io/github/jerinphilip/whisper/engine/: IWhisperEngine.java  WhisperEngine.java  WhisperEngineNative.java
io/github/jerinphilip/whisper/utils/: WaveUtil.java  WhisperUtil.java
minimal/: CMakeLists.txt  minimal.cc  tflt-vocab-mel.h  whisper.h
scripts/: build-android.sh  build.sh  format-check.sh  run-java.sh  run.sh
whisper.tflite/: CMakeLists.txt  TFLiteEngine.cpp  TFLiteEngine.h  filters_vocab_multilingual.h  mmap_file.cpp  mmap_file.h  wav_util.cpp  wav_util.h  whisper.cpp  whisper.h
wtj/: CMakeLists.txt  TFLiteEngine.cpp  TFLiteEngine.h  TFLiteEngineJNI.cpp  filters_vocab_en.h  main.cpp  silent_detection.cpp  vad.cpp  wav_util.cpp  wav_util.h  whisper.cpp  whisper.h
